--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 Installation:
 	
-	git clone git://github.com/lextoumbourou/dotvim.git ~/.vim
-
-Create symlinks:
-
-	ln -s ~/.vim/vimrc ~/.vimrc
+	cd ~
+	git clone git://github.com/lextoumbourou/dotfiles.git
+	cd dotfiles/bin
+	./setup.sh
