--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation instructions:
 
 	cd ~
-	git clone git://github.com/lextoumbourou/dotfiles.git
+	git clone  --recursive git://github.com/lextoumbourou/dotfiles.git
 	cd dotfiles/bin
 	./setup.sh
